<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="PluralsCandidate">
    <string name="launch_name">HRocket</string>
    <string name="app_name">HRocket</string>
    <string name="stopped">Stopped</string>
    <string name="tap_to_start">Tap to start</string>
    <string name="running">Running</string>
    <string name="format_traffic_forwarded">%s Forwarded</string>
    <string name="proxy">Proxy</string>
    <string name="direct_mode">Direct Mode</string>
    <string name="rule_mode">Rule Mode</string>
    <string name="global_mode">Global Mode</string>
    <string name="script_mode">Script Mode</string>
    <string name="proxy_empty_tips">No groups can be displayed</string>
    <string name="profiles">Profiles</string>
    <string name="not_selected">Not selected</string>
    <string name="format_profile_activated">%s Activated</string>
    <string name="logs">Logs</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="copied">Copied</string>
    <string name="recently">Recently</string>
    <string name="format_minutes">%d min</string>
    <string name="format_elements">%d elements</string>
    <string name="format_minutes_ago">%d min ago</string>
    <string name="format_hours_ago">%d hours ago</string>
    <string name="format_days_ago">%d days ago</string>
    <string name="format_months_ago">%d months ago</string>
    <string name="format_years_ago">%d years ago</string>
    <string name="create_profile">Create Profile</string>
    <string name="file">File</string>
    <string name="import_from_file">Import from File</string>
    <string name="url">URL</string>
    <string name="import_from_url">Import from URL</string>
    <string name="external">External</string>
    <string name="format_type_unsaved">%s (Unsaved)</string>
    <string name="application_broken">Application Broken</string>
    <string name="application_crashed">Application Crashed</string>
    <string name="application_broken_tips">App lacks the necessary runtime components, which is usually caused by downloading an incomplete apk.</string>
    <string name="reinstall">Reinstall</string>
    <string name="github_releases">Github Releases</string>
    <string name="github_releases_url" translatable="false">https://github.com/kr328/clashforandroid/releases</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="profile_name">Profile Name</string>
    <string name="profile_url">Profile URL</string>
    <string name="auto_update">Auto Update</string>
    <string name="auto_update_minutes">Auto Update (Minutes)</string>
    <string name="accept_http_content">Accept only http(s)</string>
    <string name="at_least_15_minutes">At least 15 minutes or empty</string>
    <string name="should_not_be_blank">Should not be blank</string>
    <string name="detail">Detail</string>
    <string name="update">Update</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="export">Export</string>
    <string name="import_">Import</string>
    <string name="properties">Properties</string>
    <string name="duplicate">Duplicate</string>
    <string name="active_unsaved_tips">Profile needs to be saved before activation</string>
    <string name="exit_without_save">Exit without Save</string>
    <string name="exit_without_save_warning">All changed will *LOST*</string>
    <string name="raw_cn" translatable="false">cn</string>
    <string name="disabled">Disabled</string>
    <string name="unavailable">Unavailable</string>
    <string name="empty_name">Empty Name</string>
    <string name="invalid_url">Invalid URL</string>
    <string name="loading">Loading</string>
    <string name="format_fetching_configuration">Fetching configuration from \'%s\'</string>
    <string name="format_fetching_provider">Fetching provider \'%s\'</string>
    <string name="initializing">Initializing</string>
    <string name="verifying">Verifying</string>
    <string name="new_profile">New Profile</string>
    <string name="delay">Delay</string>
    <string name="sort">Sort</string>
    <string name="default_">Default</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="clash_logcat">Clash Logcat</string>
    <string name="history">History</string>
    <string name="logcat">Logcat</string>
    <string name="delete_all_logs">Delete All Logs</string>
    <string name="delete_all_logs_warn">All historical logs will *LOST*</string>
    <string name="file_exported">File Exported</string>
    <string name="behavior">Behavior</string>
    <string name="network">Network</string>
    <string name="interface_">Interface</string>
    <string name="override">Override</string>
    <string name="auto_restart">Auto Restart</string>
    <string name="allow_clash_auto_restart">Allow clash auto restart</string>
    <string name="route_system_traffic">Route System Traffic</string>
    <string name="routing_via_vpn_service">Auto routing all system traffic via VpnService</string>
    <string name="vpn_service_options">VpnService Options</string>
    <string name="bypass_private_network">Bypass Private Network</string>
    <string name="bypass_private_network_summary">Bypass private network addresses</string>
    <string name="dns_hijacking">DNS Hijacking</string>
    <string name="dns_hijacking_summary">Handle all dns packet</string>
    <string name="block_loopback">Block Loopback</string>
    <string name="block_loopback_summary">Block loopback connections</string>
    <string name="allow_bypass">Allow Bypass</string>
    <string name="allow_bypass_summary">Allows all apps to bypass this VPN connection</string>
    <string name="system_proxy">System Proxy</string>
    <string name="system_proxy_summary">Attach http proxy to VpnService</string>
    <string name="access_control_mode">Access Control Mode</string>
    <string name="access_control_packages">Access Control Packages</string>
    <string name="access_control_packages_summary">Configure access permission for apps</string>
    <string name="options_unavailable">Options Unavailable until Clash Stopped</string>
    <string name="general">General</string>
    <string name="dns">DNS</string>
    <string name="http_port">HTTP Port</string>
    <string name="socks_port">Socks Port</string>
    <string name="redirect_port">Redirect Port</string>
    <string name="mixed_port">Mixed Port</string>
    <string name="tproxy_port">TProxy Port</string>
    <string name="authentication">Authentication</string>
    <string name="allow_lan">Allow LAN</string>
    <string name="bind_address">Bind Address</string>
    <string name="mode">Mode</string>
    <string name="log_level">Log Level</string>
    <string name="sniff_tls_sni">Sniff TLS SNI</string>
    <string name="ipv6">IPv6</string>
    <string name="hosts">Hosts</string>
    <string name="sideload_geoip">Sideload GEOIP</string>
    <string name="sideload_geoip_summary">External GEOIP database</string>
    <string name="_new">New</string>
    <string name="value">Value</string>
    <string name="strategy">Strategy</string>
    <string name="listen">Listen</string>
    <string name="append_system_dns">Append System DNS</string>
    <string name="use_hosts">Use Hosts</string>
    <string name="enhanced_mode">Enhanced Mode</string>
    <string name="name_server">Name Server</string>
    <string name="fallback">Fallback Name Server</string>
    <string name="default_name_server">Default Name Server</string>
    <string name="fakeip_filter">Fake-IP Filter</string>
    <string name="geoip_fallback">GeoIP Fallback</string>
    <string name="geoip_fallback_code">GeoIP Fallback Code</string>
    <string name="ipcidr_fallback">IPCIDR Fallback</string>
    <string name="domain_fallback">Domain Fallback</string>
    <string name="name_server_policy">Name Server Policy</string>
    <string name="dont_modify">Do not modify</string>
    <string name="empty">Empty</string>
    <string name="enabled">Enabled</string>
    <string name="info">Info</string>
    <string name="warning">Warning</string>
    <string name="error">Error</string>
    <string name="debug">Debug</string>
    <string name="silent">Silent</string>
    <string name="force_enable">Force Enable</string>
    <string name="mapping">Real-IP to domain mapping</string>
    <string name="fakeip">Fake-IP to domain mapping</string>
    <string name="system_apps">System Apps</string>
    <string name="filter">Filter</string>
    <string name="package_name">Package Name</string>
    <string name="update_time">Update Time</string>
    <string name="install_time">Install Time</string>
    <string name="reverse">Reverse</string>
    <string name="search">Search</string>
    <string name="select_all">Select All</string>
    <string name="select_invert">Select Invert</string>
    <string name="select_none">Select None</string>
    <string name="import_from_clipboard">Import from Clipboard</string>
    <string name="export_to_clipboard">Export to Clipboard</string>
    <string name="clash_for_android">Clash for Android</string>
    <string name="document">Document</string>
    <string name="feedback">Feedback</string>
    <string name="sources">Sources</string>
    <string name="donate">Donate</string>
    <string name="clash_wiki">Clash Wiki</string>
    <string name="github_issues">Github Issues</string>
    <string name="google_play">Google Play</string>
    <string name="clash_core">Clash Core</string>
    <string name="clash_wiki_url" translatable="false">https://github.com/Dreamacro/clash/wiki</string>
    <string name="github_issues_url" translatable="false">https://github.com/Kr328/ClashForAndroid/issues</string>
    <string name="donate_url" translatable="false">https://donate.kr328.app</string>
    <string name="github_url" translatable="false">https://github.com/Kr328/ClashForAndroid</string>
    <string name="clash_core_url" translatable="false">https://github.com/Dreamacro/clash</string>
    <string name="tips_properties"><![CDATA[Accept Only <strong>Clash Config</strong>(including <strong>Proxy</strong>/<strong>Rules</strong>)]]></string>
    <string name="tips_help"><![CDATA[Clash for Android is a <strong>freeware</strong> and we do <strong>NOT</strong> provide any service for it]]></string>
    <string name="google_play_url" translatable="false">https://play.google.com/store/apps/details?id=com.github.kr328.clash</string>
    <string name="app">App</string>
    <string name="service">Service</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="show_traffic">Show Traffic</string>
    <string name="show_traffic_summary">Auto refresh traffic in notification</string>
    <string name="register_content">欢迎注册Hada Market</string>
    <string name="register_phone">手机</string>
    <string name="register_email">邮箱</string>
    <string name="register_next">下一步</string>
    <string name="register_code_tips">请输入验证码</string>
    <string name="register_code_phone">验证码已发送至手机 +86 %s</string>
    <string name="register_count_info">设置账号信息</string>
    <string name="register_user_name">用户名</string>
    <string name="register_user_name_hint">请输入用户名</string>
    <string name="register_password">密码</string>
    <string name="register_password_hint">请输入8-16位密码</string>
    <string name="register_password_repeat">重复输入密码</string>
    <string name="register_password_repeat_hint">请重复输入所设置密码</string>
    <string name="login">登录</string>
    <string name="sure">确认</string>
    <string name="code_cn">+86</string>
    <string name="password_hint">请输入密码</string>
    <string name="phone_hint">输入手机号</string>
    <string name="login_by_email">邮箱登录</string>
    <string name="login_to_register">暂无账号,立即注册</string>
    <string name="login_by_other">其他登录方式</string>
    <string name="login_by_code">验证码登录</string>
</resources>