<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_baseline_arrow_back_black" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/register_count_info"
            android:textSize="@dimen/text_size_title"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/register_user_name"
            android:textSize="@dimen/text_size_xxl"
            android:textStyle="bold" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_nick_name"
            android:maxLength="10"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/register_user_name_hint"
            android:textSize="@dimen/text_size_xxl" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@color/line" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/register_password"
            android:textSize="@dimen/text_size_xxl"
            android:textStyle="bold" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:inputType="textPassword"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/register_password_hint"
                android:maxLength="16"
                android:textSize="@dimen/text_size_xxl" />

            <androidx.appcompat.widget.AppCompatImageView
                android:src="@drawable/ic_logo_service"
                android:padding="8dp"
                android:id="@+id/iv_show_password"
                android:layout_marginRight="20dp"
                android:layout_width="40dp"
                android:layout_height="40dp"/>
        </androidx.appcompat.widget.LinearLayoutCompat>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@color/line" />


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/register_password_repeat"
            android:textSize="@dimen/text_size_xxl"
            android:textStyle="bold" />


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="0dp"
                android:id="@+id/et_repeat"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/register_password_repeat_hint"
                android:maxLength="16"
                android:textSize="@dimen/text_size_xxl" />

            <androidx.appcompat.widget.AppCompatImageView
                android:src="@drawable/ic_logo_service"
                android:padding="8dp"
                android:id="@+id/iv_show_repeat"
                android:layout_marginRight="20dp"
                android:layout_width="40dp"
                android:layout_height="40dp"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@color/line" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/btn_register"
            android:layout_gravity="bottom"
            android:layout_margin="40dp"
            android:background="@color/text_color_normal"
            android:gravity="center"
            android:text="@string/sure"
            android:textSize="@dimen/text_size_xxxl" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>