<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_baseline_arrow_back_black" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/register_code_tips"
            android:textSize="@dimen/text_size_title"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_register_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/register_code_phone"
            android:textSize="@dimen/text_size_xxxl"
            android:textStyle="bold" />


        <cjh.authnumberviewlibrary.AuthNumberView
            android:id="@+id/auth1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:gravity="center"
            app:codeMargin="4dp"
            app:codeTextColor="@color/text_color_normal"
            app:codeTextSize="@dimen/text_size_l"
            app:editStyle="border"
            app:editTextWH="20dp"
            app:numberCount="6" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/btn_register_next"
            android:layout_margin="40dp"
            android:background="@color/text_color_normal"
            android:gravity="center"
            android:text="@string/register_next"
            android:textSize="@dimen/text_size_xxxl" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>