<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_baseline_arrow_back_black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_register_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:gravity="left"
            android:text="@string/register_content"
            android:textSize="@dimen/text_size_title"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_back" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_register_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_register_content">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_phone"
                android:textSize="@dimen/text_size_xxl" />
            <View
                android:id="@+id/line_phone"
                android:layout_width="30dp"
                android:layout_height="2dp"
                android:layout_marginTop="4dp"
                android:background="@color/text_color_normal" />

        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_register_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/ll_register_phone"
            app:layout_constraintLeft_toRightOf="@+id/ll_register_phone"
            app:layout_constraintTop_toTopOf="@+id/ll_register_phone">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_email"
                android:textSize="@dimen/text_size_xxl" />
            <View
                android:id="@+id/line_email"
                android:layout_width="30dp"
                android:layout_height="2dp"
                android:layout_marginTop="4dp"
                android:background="@color/text_color_normal"
                android:visibility="invisible" />

        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_register_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_register_phone">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_phone_pre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:text="+86" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_login_content"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_register_next"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="@color/color_clash"
            android:text="@string/register_next"
            app:layout_constraintTop_toBottomOf="@+id/ll_register_input" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>